@@ -1,39 +1,40 @@
-function Addonfeedback_create(){
-    var presenter = function() {};
+function Addonfeedback_create() {
+    var presenter = function () {
+    };
 
-    presenter.responses         = {};
-    presenter.defaultResponse   = "";
+    presenter.responses = {};
+    presenter.defaultResponse = "";
     presenter.feedbackContainer = null;
     presenter.currentStateDefault = false;
-    presenter.currentStateId      = null;
+    presenter.currentStateId = null;
 
     var playerController = null;
     var textParser = null;
 
     presenter.STATUSES = {
-        TRUE:    "T",
-        FALSE:   "F",
+        TRUE: "T",
+        FALSE: "F",
         NEUTRAL: "N"
     };
 
     presenter.ERROR_MESSAGES = {
-        RESPONSE_ID_NOT_UNIQUE:  "Response ID \"%id%\" is not unique",
+        RESPONSE_ID_NOT_UNIQUE: "Response ID \"%id%\" is not unique",
         RESPONSE_STATUS_INVALID: "Response status \"%status%\" for response %n% (ID \"%id%\") is invalid, it has to be one of \"T\" (true), \"N\" (neutral) or \"F\" (false)",
         PREVIEW_RESPONSE_ID_INVALID: "Cannot preview response: there's no response with ID \"%id%\""
     };
 
-    presenter.setPlayerController = function(controller) {
+    presenter.setPlayerController = function (controller) {
         playerController = controller;
         textParser = new TextParserProxy(playerController.getTextParser());
     };
 
-    presenter.showErrorMessage = function(message, substitutions) {
+    presenter.showErrorMessage = function (message, substitutions) {
         var errorContainer;
-        if(typeof(substitutions) == 'undefined') {
+        if (typeof(substitutions) == 'undefined') {
             errorContainer = '<p>' + message + '</p>';
         } else {
             var messageSubst = message;
-            for(var key in substitutions) {
+            for (var key in substitutions) {
                 if (!substitutions.hasOwnProperty(key)) continue;
 
                 messageSubst = messageSubst.replace('%' + key + '%', substitutions[key]);
@@ -44,31 +45,35 @@ function Addonfeedback_create(){
         presenter.$view.html(errorContainer);
     };
 
-    presenter.setDefaultResponse = function() {
-        presenter.feedbackContainer.find('.response').removeClass('visible');
-        $(this).addClass('visible');
-        if(presenter.preview || !presenter.configuration.fadeTransitions) {
+    presenter.setDefaultResponse = function () {
+        if (!presenter.preview) {
+            presenter.feedbackContainer.find('.response').removeClass('visible');
+            presenter.feedbackContainer.find('.default_response').addClass('visible');
+        }
+        if (presenter.preview || !presenter.configuration.fadeTransitions) {
             presenter.feedbackContainer.find('.response').css('opacity', 0);
             presenter.feedbackContainer.find('.default_response').css('opacity', 1);
-        } else if(presenter.configuration.fadeTransitions) {
+        } else if (presenter.configuration.fadeTransitions) {
 
-            presenter.feedbackContainer.find('.response:not(.default_response)').animate({opacity: 0.0}, {queue : false});
-            presenter.feedbackContainer.find('.default_response').animate({opacity: 1.0}, {queue : false});
+            presenter.feedbackContainer.find('.response:not(.default_response)').animate({opacity: 0.0}, {queue: false});
+            presenter.feedbackContainer.find('.default_response').animate({opacity: 1.0}, {queue: false});
         }
 
         presenter.currentStateDefault = true;
         presenter.currentStateId = null;
     };
 
-    presenter.setResponse = function(id) {
-        presenter.feedbackContainer.find('.response').removeClass('visible');
-        $(this).addClass('visible');
-        if(presenter.preview || !presenter.configuration.fadeTransitions) {
+    presenter.setResponse = function (id) {
+        if (!presenter.preview) {
+            presenter.feedbackContainer.find('.response').removeClass('visible');
+            presenter.feedbackContainer.find('.response_' + id).addClass('visible');
+        }
+        if (presenter.preview || !presenter.configuration.fadeTransitions) {
             presenter.feedbackContainer.find('.response').css('opacity', 0);
             presenter.feedbackContainer.find('.response_' + id).css('opacity', 1);
         } else if (presenter.configuration.fadeTransitions) {
-            presenter.feedbackContainer.find('.response').animate({opacity: 0.0}, {queue : false});
-            presenter.feedbackContainer.find('.response_' + id).animate({opacity: 1.0}, {queue : false});
+            presenter.feedbackContainer.find('.response').animate({opacity: 0.0}, {queue: false});
+            presenter.feedbackContainer.find('.response_' + id).animate({opacity: 1.0}, {queue: false});
         }
 
         presenter.currentStateDefault = false;
@@ -88,7 +93,7 @@ function Addonfeedback_create(){
         return $feedbackTable;
     }
 
-    presenter.initialize = function(view, model, preview) {
+    presenter.initialize = function (view, model, preview) {
         var text;
         var text_inner;
 
@@ -101,22 +106,22 @@ function Addonfeedback_create(){
 
         presenter.configuration = presenter.validateModel(model);
 
-        for(var i = 0; i < model['Responses'].length; i++) {
-            if(typeof(presenter.responses[model['Responses'][i]['Unique response ID']]) != "undefined") {
+        for (var i = 0; i < model['Responses'].length; i++) {
+            if (typeof(presenter.responses[model['Responses'][i]['Unique response ID']]) != "undefined") {
                 presenter.showErrorMessage(presenter.ERROR_MESSAGES.RESPONSE_ID_NOT_UNIQUE, { id: model['Responses'][i]['Unique response ID']});
                 return;
             }
 
-            if(model['Responses'][i]['Status'] != presenter.STATUSES.TRUE &&
+            if (model['Responses'][i]['Status'] != presenter.STATUSES.TRUE &&
                 model['Responses'][i]['Status'] != presenter.STATUSES.NEUTRAL &&
                 model['Responses'][i]['Status'] != presenter.STATUSES.FALSE) {
-                presenter.showErrorMessage(presenter.ERROR_MESSAGES.RESPONSE_STATUS_INVALID, { n : i+1, id: model['Responses'][i]['Unique response ID'], status: model['Responses'][i]['Status']});
+                presenter.showErrorMessage(presenter.ERROR_MESSAGES.RESPONSE_STATUS_INVALID, { n: i + 1, id: model['Responses'][i]['Unique response ID'], status: model['Responses'][i]['Status']});
                 return;
             }
 
             var responseText = model['Responses'][i]['Text'];
             if (textParser !== null && !preview) {
-                  responseText = textParser.parse(responseText);
+                responseText = textParser.parse(responseText);
             }
             presenter.responses[model['Responses'][i]['Unique response ID']] = { status: model['Responses'][i]['Status'].toUpperCase(), text: responseText };
 
@@ -128,7 +133,7 @@ function Addonfeedback_create(){
             var $responseTable = createResponseTable(responseText);
             text_inner.html($responseTable);
 
-            switch(model['Responses'][i]['Status']) {
+            switch (model['Responses'][i]['Status']) {
                 case presenter.STATUSES.TRUE:
                     text.addClass("true_response");
                     break;
@@ -165,7 +170,7 @@ function Addonfeedback_create(){
             textParser.connectLinks(presenter.feedbackContainer);
         }
 
-        if(!preview) {
+        if (!preview) {
             presenter.setDefaultResponse();
             return;
         }
@@ -175,7 +180,7 @@ function Addonfeedback_create(){
             presenter.setDefaultResponse();
         } else {
             if (typeof(presenter.responses[model['Preview response ID']]) == "undefined") {
-                presenter.showErrorMessage(presenter.ERROR_MESSAGES.PREVIEW_RESPONSE_ID_INVALID, { id:model['Preview response ID'] });
+                presenter.showErrorMessage(presenter.ERROR_MESSAGES.PREVIEW_RESPONSE_ID_INVALID, { id: model['Preview response ID'] });
             } else {
                 presenter.setResponse(model['Preview response ID']);
             }
@@ -192,8 +197,8 @@ function Addonfeedback_create(){
         };
     };
 
-    presenter.centerInner = function(text_inner) {
-        if(presenter.configuration.centerVertically) {
+    presenter.centerInner = function (text_inner) {
+        if (presenter.configuration.centerVertically) {
             var parentHeight = $(text_inner).parent().height();
             var parentHWidth = $(text_inner).parent().width();
             $(text_inner).css({
@@ -204,7 +209,7 @@ function Addonfeedback_create(){
             });
         }
 
-        if(presenter.configuration.centerHorizontally) {
+        if (presenter.configuration.centerHorizontally) {
             $(text_inner).find('table').css({
                 marginLeft: 'auto',
                 marginRight: 'auto'
@@ -212,19 +217,19 @@ function Addonfeedback_create(){
         }
     };
 
-    presenter.run = function(view, model){
+    presenter.run = function (view, model) {
         presenter.initialize(view, model, false);
     };
 
-    presenter.createPreview = function(view, model) {
+    presenter.createPreview = function (view, model) {
         presenter.initialize(view, model, true);
     };
 
-    presenter.reset = function() {
+    presenter.reset = function () {
         presenter.setDefaultResponse();
     };
 
-    presenter.setShowErrorsMode = function() {
+    presenter.setShowErrorsMode = function () {
         if (presenter.configuration.isActivity) {
             presenter.setDefaultResponse();
         }
@@ -237,12 +242,12 @@ function Addonfeedback_create(){
     };
 
     presenter.changeCommand = function (params) {
-        if(params.length >= 1) {
+        if (params.length >= 1) {
             presenter.change(params[0])
         }
     };
 
-    presenter.executeCommand = function(name, params) {
+    presenter.executeCommand = function (name, params) {
         var commands = {
             'change': presenter.changeCommand,
             'setDefaultResponse': presenter.setDefaultResponse,
@@ -281,15 +286,15 @@ function Addonfeedback_create(){
     };
 
 
-    presenter.getState = function() {
+    presenter.getState = function () {
         return JSON.stringify({
-            'currentStateDefault' : presenter.currentStateDefault,
-            'currentStateId' : presenter.currentStateId
+            'currentStateDefault': presenter.currentStateDefault,
+            'currentStateId': presenter.currentStateId
         });
     };
 
-    presenter.setState = function(stateString) {
-        if(presenter.configuration.resetResponse) {
+    presenter.setState = function (stateString) {
+        if (presenter.configuration.resetResponse) {
             presenter.setDefaultResponse();
             return;
         }
