@@ -12,7 +12,7 @@ function(){return this.isQueueEmpty()?null:this.queue.splice(0,1)[0]};e.Commands
 this.queue.length}})(window);(function(e){e.ImageViewer={validateSound:function(a){var b=[];if(a&&$.isArray(a))for(var c=0;c<a.length;c++){var d=ModelValidationUtils.isStringWithPrefixEmpty(a[c]["MP3 sound"],"/file/"),e=ModelValidationUtils.isStringWithPrefixEmpty(a[c]["AAC sound"],"/file/"),g=ModelValidationUtils.isStringWithPrefixEmpty(a[c]["OGG sound"],"/file/");b.push({AAC:e?"":a[c]["AAC sound"],OGG:g?"":a[c]["OGG sound"],MP3:d?"":a[c]["MP3 sound"],isEmpty:d&&e&&g})}return{sounds:b}},loadSounds:function(a,b){var c=[];if(!buzz.isSupported()||
 !a||!b)return c;for(var d=0;d<b;d++)d>a.length-1||a[d].isEmpty?c[d]=null:(c[d]=""!==a[d].MP3&&buzz.isMP3Supported()?new buzz.sound(a[d].MP3):""!==a[d].OGG&&buzz.isOGGSupported()?new buzz.sound(a[d].OGG):new buzz.sound(a[d].AAC),c[d].load());return c},convertFramesList:function(a,b,c){if(ModelValidationUtils.isStringEmpty(a))return{isError:!0,errorCode:"FL01"};var d=a.match(/[0-9a-zA-Z,-]+/);if(null===d||a.length!==d[0].length)return{isError:!0,errorCode:"FL02"};for(var d=[],a=a.split(","),e=0;e<a.length;e++){if(ModelValidationUtils.isStringEmpty(a[e]))return{isError:!0,
 errorCode:"FL04"};if(-1!==a[e].search("-")){var g=a[e].split("-")[1],h=ModelValidationUtils.validateIntegerInRange(g,c,b);if(!h.isValid)return{isError:!0,errorCode:"FL05"};var i=a[e].split("-")[0],g=ModelValidationUtils.validateIntegerInRange(i,g.value,b);if(!g.isValid||g.value>h.value)return{isError:!0,errorCode:"FL05"};for(g=g.value;g<=h.value;g++)d.push(g)}else{h=ModelValidationUtils.validateIntegerInRange(a[e],c,b);if(!h.isValid)return{isError:!0,errorCode:"FL03"};d.push(h.value)}}d.sort();d=
-ModelValidationUtils.removeDuplicatesFromArray(d);return{isError:!1,list:d}}}})(window);(function(e){e.StringUtils={replaceAll:function(a,b,c){b=b.replace(/([.?*+^$[\]\\(){}|-])/g,"\\$1");return a.replace(RegExp(b,"g"),c)},startsWith:function(a,b){return a.match("^"+b)==b},endsWith:function(a,b){return-1!==a.indexOf(b,a.length-b.length)}}})(window);(function(e){e.TextParserProxy=function(a){if(null==a)return null;this.parser=a};e.TextParserProxy.prototype.parse=function(a){return this.parser.parse(a).replace("href='#'",'href="javascript:void(0)"')};e.TextParserProxy.prototype.connectLinks=function(a){return this.parser.connectLinks(a)}})(window);
+ModelValidationUtils.removeDuplicatesFromArray(d);return{isError:!1,list:d}}}})(window);(function(e){e.StringUtils={replaceAll:function(a,b,c){b=b.replace(/([.?*+^$[\]\\(){}|-])/g,"\\$1");return a.replace(RegExp(b,"g"),c)},startsWith:function(a,b){return a.match("^"+b)==b},endsWith:function(a,b){return-1!==a.indexOf(b,a.length-b.length)}}})(window);(function(e){e.TextParserProxy=function(a){if(null==a)return null;this.parser=a};e.TextParserProxy.prototype.parse=function(a){a=this.parser.parse(a);return StringUtils.replaceAll(a,"href='#'",'href="javascript:void(0)"')};e.TextParserProxy.prototype.connectLinks=function(a){return this.parser.connectLinks(a)}})(window);
 /**
  * Player Addons Commons library
  * @version 1.8
